--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -3,9 +3,36 @@ pipeline {
     stages {
         stage('Build') {
             steps {
-                def mvnHome = tool name: 'Jenkins-maven', type: 'maven'
-				def mvnCMD = "${mvnHome}/bin/mvn"
-				sh "${mvnCMD} clean package"
+                pipeline {
+    agent {
+        docker {
+            image 'maven:3-alpine'
+            args '-v /root/.m2:/root/.m2'
+        }
+    }
+    stages {
+        stage('Build') {
+            steps {
+                sh 'Jenkins-maven/bin/mvn clean package'
+            }
+        }
+        stage('Test') {
+            steps {
+                sh 'mvn test'
+            }
+            post {
+                always {
+                    junit 'target/surefire-reports/*.xml'
+                }
+            }
+        }
+        stage('Deliver') {
+            steps {
+                sh './jenkins/scripts/deliver.sh'
+            }
+        }
+    }
+}
             }
         }
         stage('Test') {
